--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "moment": "^2.29.1",
     "next": "10.0.3",
     "postcss": "^8.2.6",
     "react": "17.0.1",
