--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+	"test": "jest __tests__/jobs.test.js"
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
@@ -16,5 +17,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "^2.0.3"
+  },
+  "devDependencies": {
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "node-mocks-http": "^1.10.1"
   }
 }
