--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-	"test": "jest __tests__/jobs.test.js"
+    "test": "jest __tests__/jobs.test.js"
   },
   "dependencies": {
     "autoprefixer": "10.2.4",
     "lodash": "4.17.20",
     "moment": "2.29.1",
     "next": "10.0.3",
+    "next-absolute-url": "1.2.2",
     "postcss": "8.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
